unpackaged/main/default/objects/Activity/fields/ACT_ActivityId_c__c.field-meta.xml
<CustomField>
    <fullName>ACT_ActivityId_c__c</fullName>
    <externalId>true</externalId>
    <label>ACT_ActivityId__c</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>