unpackaged/main/default/objects/Activity/fields/Outreach_Kaia_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Kaia_Recording_URL__c</fullName>
    <description>URL for recording of meeting/call in Outreach</description>
    <inlineHelpText>URL from Outreach for recording</inlineHelpText>
    <label>Kaia Recording URL</label>
    <type>Url</type>
</CustomField>