unpackaged/main/default/objects/Activity/fields/User_Branch__c.field-meta.xml
<CustomField>
    <fullName>User_Branch__c</fullName>
    <description>BDG Branch on the user record of the activity owner</description>
    <formula>TEXT(Owner:User.BDG_Branch__c)</formula>
    <inlineHelpText>BDG Branch on the user record of the activity owner</inlineHelpText>
    <label>User Branch</label>
    <type>Text</type>
</CustomField>