unpackaged/main/default/objects/Activity/fields/Vanguard_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Task_ID__c</fullName>
    <label>Vanguard Task ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>